--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "comfyui-string-tools",
-  "version": "0.0.2",
+  "name": "comfyui-glam",
+  "version": "0.0.1",
   "description": "",
   "scripts": {
     "build": "tsc",
